Updated app styling to fix off-center issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,21 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:500);
 
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+}
+
 .App {
   text-align: center;
   padding: 2% 5%;
   max-width: 1200px;
   margin: 0 auto;
   min-height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .App * {
@@ -41,10 +51,9 @@ input[type="number"] {
 #city-search {
   display: flex;
   flex-direction: column;
-  margin: auto;
+  margin: 0 auto 20px auto;
   position: relative;
   width: 250px;
-  margin-bottom: 20px;
 }
 
 .suggestions {
@@ -76,7 +85,9 @@ input[type="number"] {
 }
 
 #number-of-events {
-  margin-bottom: 30px;
+  margin: 0 auto 30px auto;
+  display: flex;
+  justify-content: center;
 }
 
 #event-list {
